quick fix for information page on mobile view

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,7 +17,7 @@ footer {
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
-  #data-table_wrapper {
+  #data-table_wrapper, .information-card {
     margin-bottom: 20%;
   }
 }
